Added logic to handle 2D positioning tests when all APs have null altitude